--- a/webBanTiVi/src/main/resources/templates/user/page/promotion/coupondetail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/promotion/coupondetail.html
@@ -3,8 +3,8 @@
 
 <section class="ss1">
     <div class="container">
-        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3">
-            <h3 class="header col text-center bg-red pt-2 pb-2 title px-3 text-uppercase fw-bold">
+        <div >
+            <h3 class="text-center pt-2 pb-2 title px-3 text-uppercase fw-bold">
                 Giảm ngay [(${discount.getValue()})]% từ sản phẩm
             </h3>
         </div><hr>
@@ -13,8 +13,8 @@
     </div>
 </section>
 <section class="container">
-    <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3">
-        <h3 class="header col text-center bg-red  pt-2 pb-2 title px-3 text-uppercase fw-bold">
+    <div >
+        <h3 class="text-center pt-2 pb-2 title px-3 text-uppercase fw-bold">
             Các sản phẩm áp dụng:
         </h3>
     </div>
