--- a/webBanTiVi/src/main/resources/templates/user/page/promotion/promotions.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/promotion/promotions.html
@@ -3,9 +3,9 @@
 
 <section class="ss1">
     <div class="container">
-        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3">
-            <h3 class="header col text-center bg-red pt-2 pb-2 title px-3 text-uppercase fw-bold">
-                Khuyến mại hot từ sản phẩm
+        <div >
+            <h3 class="text-center pt-2 pb-2 title px-3 text-uppercase fw-bold">
+                Khuyến mãi giảm giá từ hãng
             </h3>
         </div>
         <div class="row row-cols-1  row-cols-lg-4 row-cols-md-4 row-cols-sm-2 g-4">
@@ -27,9 +27,9 @@
 </section>
 <section class="ss2">
     <div class="container">
-        <div class="row mb-4 pt-3 row-cols-lg-3 row-cols-md-3 row-cols-xl-3">
-            <h3 class="header col text-center bg-red  pt-2 pb-2 title px-3 text-uppercase fw-bold">
-                Khuyến mại hot từ cửa hàng
+        <div >
+            <h3 class="text-center pt-2 pb-2 title px-3 text-uppercase fw-bold">
+                Khuyến mãi voucher từ cửa hàng
             </h3>
         </div>
         <div class="row row-cols-1  row-cols-lg-4 row-cols-md-4 row-cols-sm-2 g-4">
