oanh sửa cập nhật voucher

--- a/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/voucher/voucher.html
@@ -297,7 +297,7 @@
                                                             <div class="input-group">
                                                                 <input class="form-control" type="text"
                                                                        th:name="minimumValue"
-                                                                       th:value="${#numbers.formatDecimal(voucher.minimumValue,0,'COMMA',0,'POINT')}">
+                                                                       th:value="${#strings.replace(#numbers.formatDecimal(voucher.minimumValue, 0,'COMMA',0,'POINT'), ',', '')}">
                                                                 <span class="input-group-text">VNĐ</span>
                                                             </div>
 
