--- a/webBanTiVi/src/main/resources/templates/user/index.html
+++ b/webBanTiVi/src/main/resources/templates/user/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" th:href="@{/admin/assets/css/sweetalert2.min.css}"/>
 
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
+    <link rel="stylesheet" href="/admin/assets/css/nouislider.min.css">
 
     <link rel="stylesheet" th:href="@{/admin/assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css}"/>
 
@@ -83,6 +84,8 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+
+
 <!--end date range picker-->
 <!-- Page JS -->
 <script th:src="@{/admin/assets/js/pages-account-settings-account.js}"></script>
