--- a/webBanTiVi/src/main/resources/templates/error/error404.html
+++ b/webBanTiVi/src/main/resources/templates/error/error404.html
@@ -15,7 +15,7 @@
             content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0"
     />
 
-<!--    <title>Error - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>-->
+    <!--    <title>Error - Pages | Sneat - Bootstrap 5 HTML Admin Template - Pro</title>-->
 
     <meta name="description" content="" />
 
@@ -58,12 +58,12 @@
 <!-- Error -->
 <div class="container-xxl container-p-y">
     <div class="misc-wrapper">
-        <h2 class="mb-2 mx-2">Xin lỗi:(</h2>
-        <p class="mb-4 mx-2">Bạn không có quyền truy cập vào trang này! 😖.</p>
-        <a class="btn btn-primary text-white" onclick="window.history.back()">Quay lại</a>
+        <h2 class="mb-2 mx-2">Xin lỗi :(</h2>
+        <p class="mb-4 mx-2">Chúng tôi không thể tìm thấy trang mà bạn cần! 😖.</p>
+        <a class="btn btn-primary text-white" href="/">Quay lại </a>
         <div class="mt-3">
             <img
-                    src="/image/img.png"
+                    src="/image/img-2.png"
                     alt="page-misc-error-light"
                     width="500"
                     class="img-fluid"
