--- a/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/confirm.html
@@ -69,7 +69,7 @@
 
                                             <div class="row mb-3">
                                                 <b class="text-start col">Trạng Thái Thanh Toán: </b>
-                                                <span th:text="*{paymentStatus == 1 ?  'Đã thanh toán':'Chưa thanht toán'}"
+                                                <span th:text="*{paymentStatus == 1 ?  'Đã thanh toán':'Chưa thanh toán'}"
                                                       class="text-start col"></span></div>
 
 
